# github-notifier-ws

./: .mise.toml  README.md  concept.md  install.ps1
.github/workflows/: ci.yml  release.yml
scripts/: gen-icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: actions.rs  config.rs  github.rs  main.rs  notify.rs  rules.rs  tray.rs
