[package]
name = "github-notifier-ws"
version = "0.1.0"
edition = "2021"
description = "GitHub notifications system tray app for Windows — YAML-driven filters"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
notify = "6"
keyring = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
urlencoding = "2"
chrono = "0.4"
url = "2"
dirs = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "UI_Notifications",
    "Data_Xml_Dom",
    "Foundation",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
